--- a/SafeRide/Frontend/package.json
+++ b/SafeRide/Frontend/package.json
@@ -5,13 +5,14 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "install": "npm install --save --legacy-peer-deps"
-    },
+  },
   "dependencies": {
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "dns": "^0.2.2",
     "fetch": "^1.1.0",
     "husky": "^7.0.4",
+    "mapbox-gl": "^2.8.1",
     "net": "^1.0.2",
     "request": "^2.88.2",
     "vue": "^3.0.0",
