--- a/SafeRide/Frontend/package.json
+++ b/SafeRide/Frontend/package.json
@@ -7,6 +7,7 @@
     "install": "npm install --save --legacy-peer-deps"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.0.0",
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "dns": "^0.2.2",
