--- a/SafeRide/Frontend/package.json
+++ b/SafeRide/Frontend/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "install": "npm install --save --legacy-peer-deps"
+    "build": "vue-cli-service build"
     },
   "dependencies": {
     "axios": "^0.25.0",
