--- a/SafeRide/Frontend/package.json
+++ b/SafeRide/Frontend/package.json
@@ -4,13 +4,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
-    },
+  },
   "dependencies": {
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "dns": "^0.2.2",
     "fetch": "^1.1.0",
     "husky": "^7.0.4",
+    "mapbox-gl": "^2.8.2",
     "net": "^1.0.2",
     "request": "^2.88.2",
     "vue": "^3.0.0",
