--- a/SafeRide/Backend/App.Config
+++ b/SafeRide/Backend/App.Config
@@ -2,9 +2,8 @@
 <configuration>
 	<connectionStrings>
 		<clear />
-		<add name="SafeRideDB"
-		connectionString= "Data Source=tcp:saferidedbserver.database.windows.net,1433;Initial Catalog=SafeRide_db;User Id=SafeRideBackend@saferidedbserver;Password=applepw123!"
-		providerName="System.Data.SqlClient"/>
+		<add name="UpdatedDatabase"
+		connectionString= "Server=tcp:updatedbackend.database.windows.net,1433;Initial Catalog=UpdatedDatabase;Persist Security Info=False;User ID=colincreasman;Password=saferide.714;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>
 	</connectionStrings>
 
 	<appSettings>
