--- a/SafeRide/Backend/Properties/launchSettings.json
+++ b/SafeRide/Backend/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -13,7 +13,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5003",
+      "applicationUrl": "http://localhost:8080; https://localhost:8080",
       "dotnetRunMessages": true
     }
   }
