--- a/SafeRide/UnitTests/SRUnitTests.csproj
+++ b/SafeRide/UnitTests/SRUnitTests.csproj
@@ -28,6 +28,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="CoordinateSharp" Version="2.13.1.1" />
+    <PackageReference Include="System.Device.Location.Portable" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -35,4 +37,8 @@
     <ProjectReference Include="..\SafeRide\Backend.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="CoordinateSharp" />
+    <None Remove="System.Device.Location.Portable" />
+  </ItemGroup>
 </Project>
