--- a/SafeRide/Backend/Properties/launchSettings.json
+++ b/SafeRide/Backend/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:8080; https://localhost:8080",
+      "applicationUrl": "https://localhost:5001;http://localhost:5003",
       "dotnetRunMessages": true
     }
   }
