--- a/SafeRide/Backend/Backend.csproj
+++ b/SafeRide/Backend/Backend.csproj
@@ -92,6 +92,8 @@
 
     <PackageReference Include="Microsoft.AspNet.WebApi.Owin" Version="5.2.7" />
 
+    <PackageReference Include="Microsoft.AspNet.WebPages" Version="3.2.8" />
+
     <PackageReference Include="Microsoft.AspNetCore.ApiAuthorization.IdentityServer" Version="6.0.1" />
 
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
