--- a/SafeRide/Frontend/package.json
+++ b/SafeRide/Frontend/package.json
@@ -6,8 +6,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.0.0",
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
+    "d3-fetch": "^3.0.1",
     "dns": "^0.2.2",
     "fetch": "^1.1.0",
     "husky": "^7.0.4",
