--- a/SafeRide/Frontend/package.json
+++ b/SafeRide/Frontend/package.json
@@ -2,16 +2,19 @@
   "name": "frontend",
   "version": "0.1.0",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "serve": "cross-env NODE_OPTIONS=--openssl-legacy-provider vue-cli-service serve",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider vue-cli-service build"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.0.0",
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "dns": "^0.2.2",
     "fetch": "^1.1.0",
     "husky": "^7.0.4",
-    "mapbox-gl": "^2.8.1",
+    "mapbox": "^1.0.0-beta5",
+    "mapbox-gl": "file:0.38.0/mapbox-gl-geocoder/dist/mapbox-gl-geocoder.css",
+    "mapbox-gl-geocoder": "^2.0.1",
     "net": "^1.0.2",
     "request": "^2.88.2",
     "vue": "^3.0.0",
