--- a/SafeRide/Frontend/package.json
+++ b/SafeRide/Frontend/package.json
@@ -2,8 +2,9 @@
   "name": "frontend",
   "version": "0.1.0",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "lint": "eslint",
+    "serve": "npm run lint -- --fix && vue-cli-service serve",
+    "build": "npm run lint -- --fix && vue-cli-service build"
   },
   "dependencies": {
     "axios": "^0.25.0",
