--- a/SafeRide/UnitTests/SRUnitTests.csproj
+++ b/SafeRide/UnitTests/SRUnitTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -36,6 +36,7 @@
     <ProjectReference Include="..\Backend\Backend.csproj" />
     <ProjectReference Include="..\SafeRide\Backend.csproj" />
   </ItemGroup>
+
 
   <ItemGroup>
     <None Remove="CoordinateSharp" />
