--- a/SafeRide/Backend/App.Config
+++ b/SafeRide/Backend/App.Config
@@ -10,6 +10,7 @@
 	<appSettings>
 		<add key="FileSuffix" value="_archive.txt"/>
 		<add key="ZipPath" value="archives.zip"/>
+		<add key="OcpApimSubscriptionKey" value="5183ebb7ae26439587e47e7e8cb8edd6"/>
 	</appSettings>
 	
 </configuration>
