--- a/SafeRide/Backend/Properties/launchSettings.json
+++ b/SafeRide/Backend/Properties/launchSettings.json
@@ -10,10 +10,11 @@
   "profiles": {
     "SafeRide": {
       "commandName": "Project",
+      "commandLineArgs": "--port 443",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5003",
+      "applicationUrl": "https://localhost:443",
       "dotnetRunMessages": true
     }
   }
