--- a/SafeRide/Frontend/tsconfig.json
+++ b/SafeRide/Frontend/tsconfig.json
@@ -30,10 +30,11 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
-    "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "test/**/*.ts",
+    "test/**/*.tsx"
+
   ],
   "exclude": [
-    "node_modules/**/*"
+    "node_modules"
   ]
 }
